--- a/force-app/main/default/tests/CanTheUser_Tests.cls
+++ b/force-app/main/default/tests/CanTheUser_Tests.cls
@@ -3,8 +3,20 @@ private inherited sharing class CanTheUser_Tests {
     // These tests rely on the assumption that standard FLS/CRUD have not been modified
     // by the user, and use the Account Object for verification of the Can Logic.
 
+    private static List<Account> generateAccounts(){
+        List<Account> accounts = new List<Account>();
+        for(Integer i = 0; i < 2; i++){
+            accounts.add(new Account());
+        }
+        return accounts;
+    }
+
     @isTest
     static void canCrudAccountCreatePositive() {
+        System.assert(
+            new CanTheUser().crud(generateAccounts(), CanTheUser.CrudType.CREATE),
+            'Unless scratch org defaults have been changed by the user, this test should pass - asserting that users can create accounts'
+        );
         System.assert(
             new CanTheUser().crud(new Account(), CanTheUser.CrudType.CREATE),
             'Unless scratch org defaults have been changed by the user, this test should pass - asserting that users can create accounts'
@@ -14,6 +26,10 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudCreateAccountPositive() {
         System.assert(
+            new CanTheUser().create(generateAccounts()),
+            'Unless scratch org defaults have been changed by the user, this test should pass - asserting that users can create accounts'
+        );
+        System.assert(
             new CanTheUser().create(new Account()),
             'Unless scratch org defaults have been changed by the user, this test should pass - asserting that users can create accounts'
         );
@@ -21,6 +37,10 @@ private inherited sharing class CanTheUser_Tests {
 
     @isTest
     static void canCrudAccountReadPositive() {
+        System.assert(
+            new CanTheUser().crud(generateAccounts(), CanTheUser.CrudType.READ),
+            'Expected to be able to read accounts'
+        );
         System.assert(
             new CanTheUser().crud(new Account(), CanTheUser.CrudType.READ),
             'Expected to be able to read accounts'
@@ -30,6 +50,10 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudReadAccountPositive() {
         System.assert(
+            new CanTheUser().read(generateAccounts()),
+            'Expected to be able to read accounts'
+        );
+        System.assert(
             new CanTheUser().read(new Account()),
             'Expected to be able to read accounts'
         );
@@ -37,6 +61,10 @@ private inherited sharing class CanTheUser_Tests {
 
     @isTest
     static void canCrudAccountUpdatePositive() {
+        System.assert(
+            new CanTheUser().crud(generateAccounts(), CanTheUser.CrudType.EDIT),
+            'Expected to be able to update accounts'
+        );
         System.assert(
             new CanTheUser().crud(new Account(), CanTheUser.CrudType.EDIT),
             'Expected to be able to update accounts'
@@ -46,6 +74,10 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudEditAccountPositive() {
         System.assert(
+            new CanTheUser().edit(generateAccounts()),
+            'Expected to be able to update accounts'
+        );
+        System.assert(
             new CanTheUser().edit(new Account()),
             'Expected to be able to update accounts'
         );
@@ -54,6 +86,10 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudAccountDeletePositive() {
         System.assert(
+            new CanTheUser().crud(generateAccounts(), CanTheUser.CrudType.DEL),
+            'Expected to be able to delete accounts'
+        );
+        System.assert(
             new CanTheUser().crud(new Account(), CanTheUser.CrudType.DEL),
             'Expected to be able to delete accounts'
         );
@@ -61,6 +97,10 @@ private inherited sharing class CanTheUser_Tests {
 
     @isTest
     static void canCrudDestroyAccountPositive() {
+        System.assert(
+            new CanTheUser().destroy(generateAccounts()),
+            'Expected to be able to delete accounts'
+        );
         System.assert(
             new CanTheUser().destroy(new Account()),
             'Expected to be able to delete accounts'
