Moar test coverage
Add Safely tests
Some minor reformatting (line breaks removed)
Update CanTheUser description to show proper sample code

--- a/force-app/main/default/classes/CanTheUser.cls
+++ b/force-app/main/default/classes/CanTheUser.cls
@@ -38,7 +38,7 @@ public with sharing class CanTheUser {
      * This class' name was chosen to facilitate easy-to-understand and read
      * code. Whenever you need to check FLS or CRUD access your code reads like
      * this
-     * `if(CanTheUser.read(new account())){}` making the calling and use of this
+     * `if(new CanTheUser().read(new account())){}` making the calling and use of this
      * code easy and intuitive.
      */
 
