--- a/force-app/main/default/tests/CanTheUser_Tests.cls
+++ b/force-app/main/default/tests/CanTheUser_Tests.cls
@@ -14,8 +14,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudAccountCreatePositive() {
         System.assert(
-            new CanTheUser()
-                .crud(generateAccounts(), CanTheUser.CrudType.CREATE),
+            new CanTheUser().crud(generateAccounts(), CanTheUser.CrudType.CREATE),
             'Unless scratch org defaults have been changed by the user, this test should pass - asserting that users can create accounts'
         );
         System.assert(
@@ -127,8 +126,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getBulkFLSAccessibleWithAccountPositive() {
         Set<String> fields = new Set<String>{ 'name', 'id' };
-        Map<String, Boolean> bulkCheck = new CanTheUser()
-            .bulkFLSAccessible('Account', fields);
+        Map<String, Boolean> bulkCheck = new CanTheUser().bulkFLSAccessible('Account', fields);
         for (String field : bulkCheck.keySet()) {
             System.assert(
                 bulkCheck.get(field),
@@ -140,8 +138,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getBulkFLSAccessibleWithAccountPositiveWithNegativeResults() {
         Set<String> fields = new Set<String>{ 'name', 'nonExistingField__c' };
-        Map<String, Boolean> bulkCheck = new CanTheUser()
-            .bulkFLSAccessible('Account', fields);
+        Map<String, Boolean> bulkCheck = new CanTheUser().bulkFLSAccessible('Account', fields);
 
         System.assert(
             bulkCheck.get('name'),
@@ -157,8 +154,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getBulkFLSUpdatableWithAccountPositive() {
         Set<String> fields = new Set<String>{ 'name', 'ShippingStreet' };
-        Map<String, Boolean> bulkCheck = new CanTheUser()
-            .bulkFLSUpdatable('Account', fields);
+        Map<String, Boolean> bulkCheck = new CanTheUser().bulkFLSUpdatable('Account', fields);
         for (String field : bulkCheck.keySet()) {
             System.assert(
                 bulkCheck.get(field),
@@ -170,8 +166,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getBulkFLSUpdatableWithAccountPositiveWithNegativeResults() {
         Set<String> fields = new Set<String>{ 'name', 'nonExistingField__c' };
-        Map<String, Boolean> bulkCheck = new CanTheUser()
-            .bulkFLSUpdatable('Account', fields);
+        Map<String, Boolean> bulkCheck = new CanTheUser().bulkFLSUpdatable('Account', fields);
 
         System.assert(
             bulkCheck.get('name'),
