--- a/force-app/main/default/classes/CanTheUser.cls
+++ b/force-app/main/default/classes/CanTheUser.cls
@@ -18,7 +18,8 @@ public with sharing class CanTheUser {
         CREATE,
         READ,
         EDIT,
-        DEL
+        DEL,
+		UPS
     }
 
     public enum FLSType {
@@ -48,7 +49,7 @@ public with sharing class CanTheUser {
      * @param permission create, read, update or delete
      * @return Boolean
      * @example
-     * System.debug(CanTheUser.crud(new Account(), CanTheUser.CrudType.READ));
+     * System.debug(new CanTheUser().crud(new Account(), CanTheUser.CrudType.READ));
      **/
     public Boolean crud(SObject obj, CrudType permission) {
         switch on permission {
@@ -64,8 +65,13 @@ public with sharing class CanTheUser {
             when DEL {
                 return obj.getSObjectType().getDescribe().isDeletable();
             }
+			when UPS {
+				return obj.getSObjectType().getDescribe().isCreateable() && obj.getSObjectType().getDescribe().isUpdateable();
+			}
+			when else {
+				return false;
+			}
         }
-        return false;
     }
 
     public Boolean crud(List<SObject> objs, CrudType permission) {
@@ -78,7 +84,7 @@ public with sharing class CanTheUser {
      * @param obj Object type to check create permissions on
      * @return Boolean
      * @example
-     * System.debug(CanTheUser.create(new Account()));
+     * System.debug(new CanTheUser().create(new Account()));
      **/
     public Boolean create(SObject obj) {
         return this.crud(obj, CrudType.CREATE);
@@ -101,7 +107,7 @@ public with sharing class CanTheUser {
      * @param obj object type to check read permissions on
      * @return Boolean
      * @example
-     * System.debug(CanTheUser.read(new Account()));
+     * System.debug(new CanTheUser().read(new Account()));
      **/
     public Boolean read(SObject obj) {
         return this.crud(obj, CrudType.READ);
@@ -124,7 +130,7 @@ public with sharing class CanTheUser {
      * @param obj object type to check edit permissions on
      * @return Boolean
      * @example
-     * System.debug(CanTheUser.edit(new Account()));
+     * System.debug(new CanTheUser().edit(new Account()));
      **/
     public Boolean edit(SObject obj) {
         return this.crud(obj, CrudType.EDIT);
@@ -141,13 +147,28 @@ public with sharing class CanTheUser {
         return this.crud(objs?.get(0), CrudType.EDIT);
     }
 
+	/**
+     * @description convenience api for determining if the running user can
+     * upsert (insert and update) the specified objects
+     * @param obj object type to check edit permissions on
+     * @return Boolean
+     * @example
+     **/
+    public Boolean ups(SObject obj) {
+        return this.crud(obj, CrudType.UPS);
+    }
+
+	public Boolean ups(List<SObject> objs) {
+        return this.crud(objs?.get(0), CrudType.UPS);
+    }
+
     /**
      * @description convenience api for determining if the running user can
      * delete/destroy the specified object
      * @param obj object type to check destroy permissions on
      * @return Boolean
      * @example
-     * System.debug(CanTheUser.destroy(new Account()));
+     * System.debug(new CanTheUser().destroy(new Account()));
      **/
     public Boolean destroy(SObject obj) {
         return this.crud(obj, CrudType.DEL);
@@ -164,7 +185,7 @@ public with sharing class CanTheUser {
      * @param field the field in question in SObjectField form
      * @return Boolean
      * @example
-     * System.debug(CanTheUser.flsAccessible('Account', 'Name'));
+     * System.debug(new CanTheUser().flsAccessible('Account', 'Name'));
      **/
     public Boolean flsAccessible(String obj, String field) {
         return getFLSForFieldOnObject(obj, field, FLSType.ACCESSIBLE);
@@ -177,7 +198,7 @@ public with sharing class CanTheUser {
      * @return      `Map<String, Boolean>`
      * @example
      * String[] fields = new String[]{'Name', 'ShippingStreet'};
-     * System.debug(CanTheUser.bulkFLSAccessible('Account', fields));
+     * System.debug(new CanTheUser().bulkFLSAccessible('Account', fields));
      */
     public Map<String, Boolean> bulkFLSAccessible(
         String obj,
@@ -197,7 +218,7 @@ public with sharing class CanTheUser {
      * @param field the field to check
      * @return Boolean
      * @example
-     * System.debug(CanTheUser.flsUpdatable('Account', 'Name'));
+     * System.debug(new CanTheUser().flsUpdatable('Account', 'Name'));
      **/
     public Boolean flsUpdatable(String obj, String field) {
         return getFLSForFieldOnObject(obj, field, FLSType.UPDATABLE);
@@ -210,7 +231,7 @@ public with sharing class CanTheUser {
      * @return      `Map<String, Boolean>`
      * @example
      * String[] fields = new String[]{'Name', 'ShippingStreet'};
-     * System.debug(CanTheUser.bulkFLSUpdatable('Account', fields));
+     * System.debug(new CanTheUser().bulkFLSUpdatable('Account', fields));
      */
     public Map<String, Boolean> bulkFLSUpdatable(
         String obj,
